--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<head>
+	<title>My webpage</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<main>
+		<h1>Under construction</h1>
+		<p> check back soon </p>
+	</main>
+</body>
