--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <head>
-	<title>My webpage</title>
-	<link rel="stylesheet" href="style.css">
+    <title>this is a website</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-	<main>
-		<h1>Under construction</h1>
-		<p> check back soon </p>
-	</main>
+
+	<article>
+
+ <h1>Welcome to this page</h1>
+<img src="image/hello.gif" alt="hello">
+
+ <br>
+ <br>
+
+ <h1 align="right"> You can leave now. Come back later </h1>
+ 
+
+
+</article>
 </body>
+</html>
